metadata/Innovation Hub/objects/Event__c.object
<CustomObject>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Agenda__c</fullName>
        <label>Agenda</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End__c</fullName>
        <label>End</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Image__c</fullName>
        <label>Image</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Location 1</fullName>
                </value>
                <value>
                    <fullName>Location 2</fullName>
                </value>
                <value>
                    <fullName>Location 3</fullName>
                </value>
                <value>
                    <fullName>Location 4</fullName>
                </value>
                <value>
                    <fullName>Location 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Registered_Attendees__c</fullName>
        <label>Registered Attendees</label>
        <summaryFilterItems>
            <field>Event_Member__c.Attending__c</field>
            <operation>equals</operation>
            <value>True</value>
        </summaryFilterItems>
        <summaryForeignKey>Event_Member__c.Event__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Registration_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Registration Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Spaces_Available__c</fullName>
        <formula>Total_Spaces_Available__c  -  Registered_Attendees__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spaces Available</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Speaker__c</fullName>
        <label>Speaker</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start__c</fullName>
        <label>Start</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Total_Spaces_Available__c</fullName>
        <label>Total Spaces Available</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Session Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Type 1</fullName>
                </value>
                <value>
                    <fullName>Type 2</fullName>
                </value>
                <value>
                    <fullName>Type 3</fullName>
                </value>
                <value>
                    <fullName>Type 4</fullName>
                </value>
                <value>
                    <fullName>Type 5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Venue__c</fullName>
        <label>Venue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Video_File_Id__c</fullName>
        <inlineHelpText>Enter in the public file Id</inlineHelpText>
        <label>Video File Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_Title__c</fullName>
        <inlineHelpText>Please enter the title of the video you wish to add to the record</inlineHelpText>
        <label>Video Title</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Video_URL__c</fullName>
        <inlineHelpText>Please enter the embed URL for your chosen video</inlineHelpText>
        <label>Video URL</label>
        <type>Url</type>
    </fields>
    <label>Event (innohub)</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Events (innohub)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Start_on_or_before_End</fullName>
        <active>true</active>
        <description>Start Date must be on or before the End Date</description>
        <errorConditionFormula>End__c &lt; Start__c</errorConditionFormula>
        <errorMessage>Event Start Date must be on or before the Event End Date</errorMessage>
    </validationRules>
</CustomObject>